GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release 3.1-18 (2014-08-12) [RHEL7.1]

** New features

  Add support for prep flag to GPT to select PowerPC Reference Platform
  boot partition type.

* Noteworthy changes in release 3.1-16 (2014-01-22) [RHEL7]

** Bug Fixes

  If a drive was 100 times an even multiple of two, sizes specified as
  a percentage would trigger the exact placement rule and refuse to round
  to the nearest half percent.

* Noteworthy changes in release 3.1-4 (2012-06-08) [Fedora]

** Bug Fixes

  libparted: Don't crash on big-endian systems when using GPT
  libparted: Treat disks without a PMBR as msdos labeled disks
  even if they have GPT partition tables.


* Noteworthy changes in release 3.1 (2012-03-02) [stable]

** New features

  parted now supports up to 64 msdos partitions (was 16).  The partition
  table format imposes no limit (it's simply a linked list), so we may
  raise it further, if needed.

  parted has improved support for partitionable loopback devices

  parted provides a new library, libparted-fs-resize, for resizing
  HFS+ and FAT file systems.  This is the subset of the FS-manipulation
  functionality removed in parted-3.0 for which we have found no free
  alternative.  That library provides only these entry points:
    ped_file_system_close
    ped_file_system_get_resize_constraint
    ped_file_system_open
    ped_file_system_resize
  so when using it you must also link with libparted.

** Bug fixes

  libparted: avoid an invalid free when creating many partitions in
  a GPT partition table.  [bug introduced in parted-1.9.0]

  The msdos partition table claimed a maximum partition count of 16
  but would allow you to go beyond that.  This resulted in the kernel
  not being informed of those partitions.  Corrected to enforce the
  limit.

  parted now exits nonzero for certain failures already diagnosed as "Error".